# open-webui-tools

./: .gitignore  CHANGELOG.md  Caddyfile  Makefile  README.md  README_ollama.md  open-webui-app.conf  open-webui-caddy.conf  open-webui-docling.conf  open-webui-glances.conf  open-webui-goaccess.conf  open-webui-local.conf  open-webui-maxmind.conf  open-webui-ollama.conf  open-webui-postgresql.conf  open-webui-redis.conf  open-webui-samba.conf  open-webui.default  open_webui.default  owebui.py  owebui_app_env.py  owebui_caddy_env.py  owebui_docker_update.py  owebui_docling_env.py  owebui_glances_env.py  owebui_goaccess_env.py  owebui_maxmind_env.py  owebui_ollama.py  owebui_ollama_env.py  owebui_postgresql_env.py  owebui_redis_env.py  owebui_samba_env.py  pyproject.toml
debian/: changelog  control  copyright  open-webui-app-update.service  open-webui-app-update.timer  open-webui-app.dirs  open-webui-app.links  open-webui-app.postinst  open-webui-app.postrm  open-webui-app.preinst  open-webui-app.prerm  open-webui-app.service  open-webui-caddy-update.service  open-webui-caddy-update.timer  open-webui-caddy.links  open-webui-caddy.postinst  open-webui-caddy.postrm  open-webui-caddy.preinst  open-webui-caddy.prerm  open-webui-caddy.service  open-webui-common.dirs  open-webui-common.postinst  open-webui-common.postrm  open-webui-common.preinst  open-webui-docker-amd-source.postinst  open-webui-docker-amd-source.postrm  open-webui-docker-amd.postinst  open-webui-docker-nvidia-source.postinst  open-webui-docker-nvidia-source.postrm  open-webui-docker-nvidia.postinst  (+69 more)
(+1 files in other folders)
